--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /.metadata/
+*.fdx
+*.fnm
+*.nrm
+*.frq
+*.prx
+*.tii
+*.tis
+*.gen
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_1
+*.lock
