--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 .recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_1
 *.lock
 *.json
+.DS_Store
+.DS_Store
+src/.DS_Store
