--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 .DS_Store
 src/.DS_Store
 .project
+src/.DS_Store
+src/Clientes/.DS_Store
+src/servidor/p/m.txt
+src/servidor/andre/m.txt
+src/servidor/andre/m.jpg
+src/.DS_Store
+src/Clientes/.DS_Store
