--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,10 @@
 *.tii
 *.tis
 *.gen
-.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_1
 *.lock
 *.json
-.DS_Store
-.DS_Store
+*.DS_Store
+*.DS_Store
 src/.DS_Store
-.project
-src/.DS_Store
-src/Clientes/.DS_Store
-src/servidor/p/m.txt
-src/servidor/andre/m.txt
-src/servidor/andre/m.jpg
-src/.DS_Store
-src/Clientes/.DS_Store
+*.project
 /.recommenders/
